make an improvised public key to implement RSA exploit (has to be changed later)

--- a/service/src/FlaskWebsite/website/templates/sign_up.html
+++ b/service/src/FlaskWebsite/website/templates/sign_up.html
@@ -22,6 +22,18 @@ content %}
       placeholder="Enter first name"
     />
   </div>
+  <!-- To be changed -->
+  <div class="form-group">
+    <label for="public_key">PublicKey</label>
+    <input
+      type="text"
+      class="form-control"
+      id="public_key"
+      name="public_key"
+      placeholder="public key"
+    />
+  </div>
+  <!-- To be changed -->
   <div class="form-group">
     <label for="password1">Password</label>
     <input
