--- a/service/src/FlaskWebsite/website/templates/home.html
+++ b/service/src/FlaskWebsite/website/templates/home.html
@@ -16,6 +16,8 @@
 <form method="POST">
   <textarea name="note" id="note" class="form-control"></textarea>
   <br />
+  <input type="text" name="public_key" id="public_key" class="form-control" placeholder="Enter Public Key">
+  <br />
   <div align="center">
     <button type="submit" class="btn btn-primary">Add Note</button>
   </div>
