--- a/service/src/FlaskWebsite/website/templates/home.html
+++ b/service/src/FlaskWebsite/website/templates/home.html
@@ -1,25 +1,35 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
-%}
-<h1 align="center">Note Groups</h1>
-<ul class="list-group list-group-flush" id="notes">
-  {% for note in notes %}
-  <li class="list-group-item">
-    {{ note.data }}
-    {% if note.owner_id == user.id %}
-    <button type="button" class="close" onClick="deleteNote({{ note.id }})">
-      <span aria-hidden="true">&times;</span>
-    </button>
-    {% endif %}
-  </li>
-  {% endfor %}
-</ul>
-<form method="POST">
-  <textarea name="note" id="note" class="form-control"></textarea>
-  <br />
-  <input type="text" name="public_key" id="public_key" class="form-control" placeholder="Enter Public Key">
-  <br />
-  <div align="center">
-    <button type="submit" class="btn btn-primary">Add Note</button>
-  </div>
-</form>
-{% endblock %}
+  %}
+  <h1 align="center">Note Groups</h1>
+  <ul class="list-group list-group-flush" id="notes">
+    {% for note in notes %}
+    <li class="list-group-item">
+      {% if note.owner_id == user.id %}
+        {{ note.data }}
+      <button type="button" class="close" onClick="deleteNote({{ note.id }})">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      {% else %}
+        {% if note.destination_id == user.id and note.owner_id != note.destionation_id%}
+          {{ note.data}}
+        {% else %}
+          {% if note.encrypted_data%}
+            {{ note.encrypted_data }}
+          {% else %}
+            {{ note.data }}
+          {% endif %}
+        {% endif %}
+      {% endif %}
+    </li>
+    {% endfor %}
+  </ul>
+  <form method="POST">
+    <textarea name="note" id="note" class="form-control"></textarea>
+    <br />
+    <input type="text" name="public_key" id="public_key" class="form-control" placeholder="Enter Public Key">
+    <br />
+    <div align="center">
+      <button type="submit" class="btn btn-primary">Add Note</button>
+    </div>
+  </form>
+  {% endblock %}
