this is so that vuln 2 cant exploit flagstore 3

--- a/service/src/templates/profil.html
+++ b/service/src/templates/profil.html
@@ -24,11 +24,11 @@
         {% endif %}
 
         <h1 align="center">Your Keys</h1>
-        {% if PRIVKEY and PUBKEY%}
+        {% if user.private_key and user.public_key%}
             <div style="word-wrap: break-word;">
             <ul class="list-group list-group-flush" id="userlist">
-              <li class="list-group-item">Your Publickey: {{ PUBKEY }}</li>
-              <li class="list-group-item">Your Privatekey (DO NOT SHARE): {{ PRIVKEY }}</li>
+              <li class="list-group-item">Your Publickey: {{ user.public_key }}</li>
+              <li class="list-group-item">Your Privatekey (DO NOT SHARE): {{ user.private_key }}</li>
             </ul>
             </div>
         {% else %}
